<resources>
    <string name="app_name">NetflixTMDB</string>

    <!-- Intros -->
    <string name="imagem_capa">Imagem da capa contendo logo do Netflix.</string>
    <string name="intro_text1">Assista a títulos originais e imperdíveis.</string>
    <string name="intro_text2">Diversão ilimitada em suas mãos.</string>
    <string name="intro_text3">Preparado? Vamos nessa!</string>
    <string name="intro_button">Let\'s Go</string>
    <string name="intro_button_description">Botão iniciar</string>

    <!-- Authentication -->
    <string name="passwordException">Insira uma senha com no mínimo 6 caracteres!</string>
    <string name="collisionException">Email informado já possui cadastrado!</string>
    <string name="networkException">Sem conexão com a internet!</string>
    <string name="invalidCredentialsException">Digite um e-mail válido!</string>
    <string name="erroCadastrar">Erro ao cadastrar usuário!</string>
    <string name="coloqueEmailSenha">Coloque o seu e-mail e sua senha!</string>
    <string name="preenchaTodosCampos">Preencha todos os campos!</string>
    <string name="loginEfetuadoSucesso">Login Efetuado Com Sucesso!</string>
    <string name="emailSenhaIncorretos">E-mail ou senha incorretos!</string>
    <string name="semConexaoInternet">Sem conexão com a internet!</string>
    <string name="erroLogarUsuario">Erro ao logar usuário!</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="senha_incorreta">Senha incorreta</string>
    <string name="entrar">ENTRAR</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="precisa_de_ajuda">Precisa de ajuda?</string>
    <string name="novo_por_aqui_inscreva_se_agora">Novo por aqui? Inscreva-se agora.</string>

    <!-- FilmsActivity-->
    <string name="filmes_recomendados">Filmes Recomendados</string>
    <string name="filmes_populares">Filmes Populares</string>

    <!-- SearchActivity-->
    <string name="SpecSearchButton">Pesquisar por um filme</string>
    <string name="searchButton">Search</string>
    <string name="search">Search</string>

    <!-- Detailsctivity -->
    <string name="details_description">O bruxo Geralt, um caçador de monstros mutante, luta para encontrar seu lugar em um mundo no qual as pessoas costumam ser mais perversas do que os animais.</string>
    <string name="like">Like</string>
    <string name="add_list">Add List</string>
    <string name="mais_filmes">Mais Filmes</string>

    <!-- FavoritesActivity -->
    <string name="favoritos">Favoritos</string>
    <string name="poster_do_filme">poster do filme</string>
    <string name="botao_voltar">botão voltar</string>
    <string name="botao_cast">botão cast</string>
    <string name="botao_iniciar_video">botao iniciar video</string>
    <string name="bot_adicionar_filme_na_lista">botão adicionar filme na lista</string>
    <string name="bot_curtir_filme">botão curtir filme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_generic_error">GenericErrorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="generic_error_message">Não foi possível acessar agora :/</string>


</resources>