<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_80"
        tools:context=".presentation.details.MoviesDetails">

        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="@dimen/default_size_500_dp"
            android:scaleType="fitXY"
            android:src="@drawable/filme1"
            android:contentDescription="@string/poster_do_filme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_8_dp"
            android:layout_marginTop="@dimen/default_size_16_dp"
            android:contentDescription="@string/botao_voltar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_left" />

        <ImageView
            android:id="@+id/imgCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_size_16_dp"
            android:contentDescription="@string/botao_cast"
            app:layout_constraintBottom_toBottomOf="@+id/imgBackArrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgBackArrow"
            app:srcCompat="@drawable/ic_cast" />

        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="@dimen/default_size_64_dp"
            android:layout_height="@dimen/default_size_64_dp"
            android:contentDescription="@string/botao_iniciar_video"
            android:layout_marginTop="@dimen/default_size_24_dp"
            app:layout_constraintEnd_toStartOf="@+id/imgStar"
            app:layout_constraintStart_toEndOf="@+id/imgAddList"
            app:layout_constraintTop_toBottomOf="@+id/imgCover"
            app:srcCompat="@drawable/play" />

        <ImageView
            android:id="@+id/imgAddList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bot_adicionar_filme_na_lista"
            android:layout_marginStart="@dimen/default_size_16_dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgPlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgPlay"
            app:srcCompat="@drawable/icc_add_circle" />

        <TextView
            android:importantForAccessibility="no"
            android:id="@+id/txtAddList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_list"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imgAddList"
            app:layout_constraintStart_toStartOf="@+id/imgAddList"
            app:layout_constraintTop_toBottomOf="@+id/imgAddList" />

        <ImageView
            android:id="@+id/imgStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_size_16_dp"
            android:contentDescription="@string/bot_curtir_filme"
            app:layout_constraintBottom_toBottomOf="@+id/imgPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgPlay"
            app:srcCompat="@drawable/ic_star_border" />

        <TextView
            android:importantForAccessibility="no"
            android:id="@+id/txtLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imgStar"
            app:layout_constraintStart_toStartOf="@+id/imgStar"
            app:layout_constraintTop_toBottomOf="@+id/imgStar" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size_24_dp"
            android:justificationMode="inter_word"
            android:text="@string/details_description"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_16_sp"
            app:layout_constraintEnd_toEndOf="@+id/imgStar"
            app:layout_constraintStart_toStartOf="@+id/imgAddList"
            app:layout_constraintTop_toBottomOf="@+id/imgPlay" />

        <TextView
            android:id="@+id/txt_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_4_dp"
            android:layout_marginTop="@dimen/default_size_16_dp"
            android:text="@string/mais_filmes"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_18_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size_8_dp"
            android:background="@color/black_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_two"
            app:layout_constraintVertical_bias="0.0" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
