<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/black_80"
        tools:context=".FormLoginActivity">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginTop="@dimen/default_size_100_dp"
            android:layout_marginStart="@dimen/default_size_20_dp"
            android:layout_marginEnd="@dimen/default_size_20_dp"
            android:padding="@dimen/default_size_20_dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginTop="@dimen/default_size_20_dp"
            android:layout_marginStart="@dimen/default_size_20_dp"
            android:layout_marginEnd="@dimen/default_size_20_dp"
            android:padding="@dimen/default_size_20_dp"
            android:hint="@string/senha"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/mensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_20_dp"
            android:layout_marginEnd="@dimen/default_size_20_dp"
            android:layout_marginTop="@dimen/default_size_5_dp"
            android:textSize="@dimen/default_text_14_sp"
            tools:text="@string/senha_incorreta"
            android:textColor="@color/orange"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_20_dp"
            android:layout_marginEnd="@dimen/default_size_20_dp"
            android:layout_marginTop="@dimen/default_size_30_dp"
            android:padding="@dimen/default_size_15_dp"
            android:background="@drawable/btn_custom"
            android:textSize="@dimen/default_text_18_sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/entrar"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtAjuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precisa_de_ajuda"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_20_sp"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/default_size_24_dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novo_por_aqui_inscreva_se_agora"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_20_sp"
            android:padding="@dimen/default_size_24_dp"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="@dimen/default_size_25_dp"
            android:layout_marginBottom="@dimen/default_size_30_dp"
            android:gravity="center"/>

    </LinearLayout>
</ScrollView>